generalize the ets interface and behaviour

--- a/rebar.config
+++ b/rebar.config
@@ -3,3 +3,6 @@
 {cover_enabled, true}.
 {eunit_opts, [verbose, {report, {eunit_surefire,[{dir,"."}]}}]}.
 {clean_files, ["*.eunit", "ebin/*.beam"]}.
+%%{deps,
+%% [{lets, ".*",
+%%   {git, "git://github.com/norton/lets.git", {branch, "master"}}}]}.
